added test basic and detailed prompt

--- a/prueba1_acc.html
+++ b/prueba1_acc.html
@@ -14,35 +14,35 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   </head>
   <body>
-    <div class="relative flex size-full min-h-screen flex-col bg-slate-50 group/design-root overflow-x-hidden" style='font-family: Inter, "Noto Sans", sans-serif;'>
+    <div class="relative flex size-full min-h-screen flex-col bg-gray-50 group/design-root overflow-x-hidden" style='font-family: Inter, "Noto Sans", sans-serif;'>
       <div class="layout-container flex h-full grow flex-col">
         <div class="gap-1 px-6 flex flex-1 justify-center py-5">
           <div class="layout-content-container flex flex-col max-w-[920px] flex-1">
-            <h2 class="text-[#0d141c] tracking-light text-[28px] font-bold leading-tight px-4 text-left pb-3 pt-5">Login</h2>
+            <h2 class="text-[#101418] tracking-light text-[28px] font-bold leading-tight px-4 text-left pb-3 pt-5">Login</h2>
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
-                <p class="text-[#0d141c] text-base font-medium leading-normal pb-2">Email</p>
+                <p class="text-[#101418] text-base font-medium leading-normal pb-2">Email</p>
                 <input
                   placeholder="Enter your email"
-                  class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#0d141c] focus:outline-0 focus:ring-0 border border-[#cedbe8] bg-slate-50 focus:border-[#cedbe8] h-14 placeholder:text-[#49739c] p-[15px] text-base font-normal leading-normal"
+                  class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#101418] focus:outline-0 focus:ring-0 border border-[#d4dbe2] bg-gray-50 focus:border-[#d4dbe2] h-14 placeholder:text-[#5c738a] p-[15px] text-base font-normal leading-normal"
                   value=""
                 />
               </label>
             </div>
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
-                <p class="text-[#0d141c] text-base font-medium leading-normal pb-2">Password</p>
+                <p class="text-[#101418] text-base font-medium leading-normal pb-2">Password</p>
                 <input
                   placeholder="Enter your password"
-                  class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#0d141c] focus:outline-0 focus:ring-0 border border-[#cedbe8] bg-slate-50 focus:border-[#cedbe8] h-14 placeholder:text-[#49739c] p-[15px] text-base font-normal leading-normal"
+                  class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#101418] focus:outline-0 focus:ring-0 border border-[#d4dbe2] bg-gray-50 focus:border-[#d4dbe2] h-14 placeholder:text-[#5c738a] p-[15px] text-base font-normal leading-normal"
                   value=""
                 />
               </label>
             </div>
-            <p class="text-[#49739c] text-sm font-normal leading-normal pb-3 pt-1 px-4 underline">Forgot Password</p>
+            <p class="text-[#5c738a] text-sm font-normal leading-normal pb-3 pt-1 px-4 underline">Forgot Password</p>
             <div class="flex px-4 py-3">
               <button
-                class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 flex-1 bg-[#0c7ff2] text-slate-50 text-base font-bold leading-normal tracking-[0.015em]"
+                class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-5 flex-1 bg-[#3f7fbf] text-gray-50 text-base font-bold leading-normal tracking-[0.015em]"
               >
                 <span class="truncate">Login</span>
               </button>
@@ -52,7 +52,7 @@
             <div class="@container">
               <div class="@[480px]:px-4 @[480px]:py-3">
                 <div
-                  class="bg-cover bg-center flex flex-col justify-end overflow-hidden bg-slate-50 @[480px]:rounded-lg min-h-80"
+                  class="bg-cover bg-center flex flex-col justify-end overflow-hidden bg-gray-50 @[480px]:rounded-xl min-h-80"
                   style='background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 25%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuCPmqipNiRZ-sf11HddDiGWMhuzVPt-xa-61D3Nb4-1p_v1NwW1en6Cym9FuJ17F_eGwuI94QvFZzu9dEAaALyr_lkUb-agAtrhropB41DiVeKpSF-BVb7yfUfhMYuwNsEIdeodj3y0QiunsNamGePPWDOIBpeWpYq8t5bKP4x7rUE8rrClOQdd-FynklNi0VLcdamushmsf5z9dRr647GVenWLHMri6GEp5d6NuIwX1dpDK_1rLRtOic53LM5A7WHcL3xGoON4BCI");'
                 >
                   <div class="flex p-4"><p class="text-white tracking-light text-[28px] font-bold leading-tight">Welcome Back!</p></div>
